# HealthPilot

./: .env.example  .gitignore  ENHANCEMENTS.md  README.md  README_IMPROVEMENTS.txt  STREAMLIT_CLOUD.md  config.py  llm_factory.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
agents/: exercise_agent.py  nutrition_agent.py  orchestrator.py  wellbeing_agent.py
agents/tools/: __init__.py  exercise_tools.py  nutrition_tools.py  shared_tools.py  web_search_tools.py  wellbeing_tools.py
analytics/: data_pipeline.py  health_metrics.py  insights.py  nutrition_calculator.py  visualizations.py
data/: README.md  generate_sample_data.py  user_profile.json
data/chroma_db/2bea43a4-d8b9-4b52-b38e-92e0d24c8ba0/: index_metadata.pickle
data/sample/: daily_activity.csv  heart_rate.csv  sleep.csv
docs/: AGENTS.md  ARCHITECTURE.md  DATA_GUIDE.md  DEPLOYMENT.md
integrations/: __init__.py  google_calendar.py
mcp_servers/: __init__.py  health_data_server.py  nutrition_server.py  registry.py  web_search_server.py  wellness_server.py
meal_planning/: __init__.py  exporter.py  generator.py  shopping_list.py
pages/: 0_Profile.py  1_Chat.py  2_Dashboard.py  3_Meal_Plan.py  4_Workout_Plan.py  5_Data_Management.py
rag/: ingest.py  retriever.py
rag/sources/: pubmed_loader.py  usda_loader.py
workout_planning/: __init__.py  calendar_integration.py  exercise_library.py  exporter.py  generator.py
